--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -66,19 +66,18 @@
         </div>
 
         <div 
-          *ngIf="password.touched && password.invalid && 
-          !loginState.success"
+          *ngIf="password.touched && password?.errors"
           class="invalid-feedback">
           <p *ngIf="password?.errors.required">
             Enter your password
           </p>
         </div>
 
-        <div 
-          *ngIf="username.dirty && !loginState.success" 
+        <!-- <div 
+          *ngIf="username.dirty && !loginState?.success" 
           class="invalid-feedback">
-          <p>{{ loginState.message }}</p>
-        </div>
+          <p>{{ loginState?.message }}</p>
+        </div> -->
       </div>
   
       <div class="action-buttons">
