--- a/src/app/user/user-account/user-account.component.html
+++ b/src/app/user/user-account/user-account.component.html
@@ -1,1 +1,5 @@
-<p>user-panel works!</p>
+<div class="container">
+  <div class="wrapper-l">
+    <button (click)="onLogout()">Log out</button>
+  </div>
+</div>
