--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -42,11 +42,18 @@
         </div>
 
         <div 
-          *ngIf="username.touched && username.invalid"
+          *ngIf="username.touched && username.invalid &&
+          !loginState?.error.username"
           class="invalid-feedback">
           <p *ngIf="username?.errors.required">
             Enter your username or email
           </p>
+        </div>
+
+        <div 
+          *ngIf="username.dirty && loginState?.error.username" 
+          class="invalid-feedback">
+          <p>{{ loginState?.message }}</p>
         </div>
       </div>
   
@@ -66,18 +73,19 @@
         </div>
 
         <div 
-          *ngIf="password.touched && password?.errors"
+          *ngIf="password.touched && password?.errors &&
+          !loginState?.error.password"
           class="invalid-feedback">
           <p *ngIf="password?.errors.required">
             Enter your password
           </p>
         </div>
 
-        <!-- <div 
-          *ngIf="username.dirty && !loginState?.success" 
+        <div 
+          *ngIf="password.dirty && loginState?.error.password" 
           class="invalid-feedback">
           <p>{{ loginState?.message }}</p>
-        </div> -->
+        </div>
       </div>
   
       <div class="action-buttons">
