--- a/src/app/user/user-account/user-account.component.html
+++ b/src/app/user/user-account/user-account.component.html
@@ -1,5 +1,11 @@
-<div class="container">
+<section class="container">
   <div class="wrapper-l">
-    <button (click)="onLogout()">Log out</button>
+    <button (click)="onLogout()" class="btn-xl">Log out</button>
+
+    <div *ngIf="!isLoading">
+      <p>{{ userAccount | json }}</p>
+    </div>
   </div>
-</div>
+
+  <app-spinner [loading]="isLoading"></app-spinner>
+</section>
