--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -1,13 +1,3 @@
-@keyframes bounce {
-  0%, 60%, 100% {
-		transform: initial;
-	}
-
-	30% {
-		transform: translateY(-4px);
-	}
-}
-
 .product-form-section {
   margin-top: 3rem;
 
@@ -117,7 +107,7 @@
             height: 6px;
             margin-right: 0.2rem;
             border-radius: 20px;
-            background-color: rgba(248, 96, 129, 0.815);
+            background-color: #F72551;
             animation: bounce 1.3s linear infinite;
 
             &:nth-child(2) {
