--- a/src/app/user/signup-page/signup-page.component.scss
+++ b/src/app/user/signup-page/signup-page.component.scss
@@ -256,6 +256,34 @@
             font-size: 0.8rem;
           }
         }
+
+        .loader {
+          position: absolute;
+          right: 0.5rem;
+          top: 50%;
+          transform: translateY(-50%);
+          display: flex;          
+          animation: reveal .5s ease;
+          z-index: 100;
+
+          span {
+            display: block;
+            width: 6px;
+            height: 6px;
+            margin-right: 0.2rem;
+            border-radius: 20px;
+            background-color: #F72551;
+            animation: bounce 1.3s linear infinite;
+
+            &:nth-child(2) {
+              animation-delay: -1s;
+            }
+        
+            &:nth-child(3) {
+              animation-delay: -0.7s;
+            }
+          }
+        }
       }
 
       .action-buttons {
