--- a/src/app/user/signup-page/signup-page.component.html
+++ b/src/app/user/signup-page/signup-page.component.html
@@ -61,6 +61,12 @@
           <label [class.shrink]="mobile.value">
             Mobile (DO)
           </label>
+
+          <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
 
         <div class="invalid-feedback"></div>
@@ -72,6 +78,12 @@
           <label [class.shrink]="email.value">
             Email address (username)
           </label>
+
+          <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
 
         <div class="invalid-feedback"></div>
