--- a/src/app/user/signup-page/signup-page.component.scss
+++ b/src/app/user/signup-page/signup-page.component.scss
@@ -240,7 +240,39 @@
               margin-left: auto;
               font-size: 1.3rem;
             }
-          }   
+          }
+          
+          .loader {
+            position: absolute;
+            top: 1rem;
+            right: 0;
+            height: calc(100% - 17px);
+            display: flex;         
+            align-items: center; 
+            animation: reveal .3s ease;
+            z-index: 100;
+  
+            span {
+              display: block;
+              width: 6px;
+              height: 6px;
+              border-radius: 20px;
+              background-color: #F72551;
+              animation: bounce 1.3s linear infinite;
+
+              &:not(:last-of-type) {
+                margin-right: 0.2rem;
+              }
+  
+              &:nth-child(2) {
+                animation-delay: -1s;
+              }
+          
+              &:nth-child(3) {
+                animation-delay: -0.7s;
+              }
+            }
+          }
         }   
         
         .invalid-feedback {
@@ -254,34 +286,6 @@
           p {
             color: #963249;
             font-size: 0.8rem;
-          }
-        }
-
-        .loader {
-          position: absolute;
-          right: 0.5rem;
-          top: 50%;
-          transform: translateY(-50%);
-          display: flex;          
-          animation: reveal .5s ease;
-          z-index: 100;
-
-          span {
-            display: block;
-            width: 6px;
-            height: 6px;
-            margin-right: 0.2rem;
-            border-radius: 20px;
-            background-color: #F72551;
-            animation: bounce 1.3s linear infinite;
-
-            &:nth-child(2) {
-              animation-delay: -1s;
-            }
-        
-            &:nth-child(3) {
-              animation-delay: -0.7s;
-            }
           }
         }
       }
