--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -8,40 +8,61 @@
 
     <div class="column-s">
       <div class="form-group">
-        <label>Product name</label>
-        <input formControlName="productName">
-      </div>
-  
-      <div class="form-group">
-        <label>Brand</label>
-        <input formControlName="brand">
-      </div>
-
-      <div class="form-group">
-        <label>Price</label>
-        <input formControlName="price" type="number" min="0" step="0.1">
+        <div class="form-group-wrapper">
+          <input formControlName="productName" type="text">
+          <label [class.shrink]="productForm.get('productName').value">
+            Product name
+          </label>
+        </div>
       </div>
 
       <div class="form-group">
-        <label>Category</label>
-        <select formControlName="categoryId">
-          <option [ngValue]="null">Choose a Category</option>
-          <option 
-            *ngFor="let category of categories" 
-            [ngValue]="category.categoryId">
-            {{ category.category }}
-          </option>
-        </select>
+        <div class="form-group-wrapper">
+          <input formControlName="brand" type="text">
+          <label [class.shrink]="productForm.get('brand').value">
+            Brand
+          </label>
+        </div>
       </div>
 
       <div class="form-group">
-        <label>Description</label>
-        <textarea formControlName="productDesc" rows="5"></textarea>
+        <div class="form-group-wrapper">
+          <input formControlName="price" type="number" min="0" step="0.1">
+          <label [class.shrink]="productForm.get('price').value">
+            Price
+          </label>
+        </div>        
       </div>
 
       <div class="form-group">
-        <label>Total in stock</label>
-        <input formControlName="totalStock" type="number" min="1">
+        <div class="form-group-wrapper">
+          <select formControlName="categoryId">
+            <option [ngValue]="null">Choose a Category</option>
+            <option 
+              *ngFor="let category of categories" 
+              [ngValue]="category.categoryId">
+              {{ category.category }}
+            </option>
+          </select>
+        </div>        
+      </div>
+
+      <div class="form-group">
+        <div class="form-group-wrapper">
+          <textarea formControlName="productDesc" rows="5"></textarea>
+          <label [class.shrink]="productForm.get('productDesc').value">
+            Description
+          </label>
+        </div>        
+      </div>
+
+      <div class="form-group">
+        <div class="form-group-wrapper">
+          <input formControlName="totalStock" type="number" min="1">
+          <label [class.shrink]="productForm.get('totalStock').value">
+            Total in stock
+          </label>
+        </div>        
       </div>
 
       <div class="form-group-2">
@@ -56,41 +77,46 @@
         [formGroup]="variantForm"
         class="variant-fields"> 
         <div class="form-group">
-          <label>Original product ID</label>
-          
-          <div class="input-wrapper">
-            <input formControlName="originalProductId" type="number">
-          
+          <div class="form-group-wrapper">
+            <input formControlName="originalProductId" type="number" min="1">
+            <label [class.shrink]="originalProductId.value">
+              Original product ID
+            </label>
+
             <div *ngIf="originalProductId.pending" class="loader">
               <span></span>
               <span></span>
               <span></span>
             </div>
-          </div>
-
-          <div 
-            *ngIf="!originalProductId.pending &&
+          </div>    
+          
+          <div *ngIf="!originalProductId.pending &&
             originalProductId?.errors?.notFound" 
             class="invalid-feedback">
-            Product not found
+            <p>Product not found</p>
           </div>
-        </div>
-        
-        <div class="form-group">
-          <label>Option</label>
-          <select formControlName="optionId">
-            <option [ngValue]="null">Choose an Option</option>
-            <option 
-              *ngFor="let option of variantOptions" 
-              [ngValue]="option.optionId">
-              {{ option.option }}
-            </option>
-          </select>
         </div>
 
         <div class="form-group">
-          <label>Value label</label>
-          <input formControlName="optionValue">
+          <div class="form-group-wrapper">
+            <select formControlName="optionId">
+              <option [ngValue]="null">Choose an Option</option>
+              <option 
+                *ngFor="let option of variantOptions" 
+                [ngValue]="option.optionId">
+                {{ option.option }}
+              </option>
+            </select>
+          </div>        
+        </div>
+
+        <div class="form-group">
+          <div class="form-group-wrapper">
+            <input formControlName="optionValue" type="text">
+            <label [class.shrink]="variantForm.get('optionValue').value">
+              Value label
+            </label>
+          </div>        
         </div>
       </div>
   
