--- a/src/app/user/signup-page/signup-page.component.html
+++ b/src/app/user/signup-page/signup-page.component.html
@@ -90,7 +90,7 @@
         </div>
 
         <div 
-          *ngIf="mobile.dirty && mobile?.errors"
+          *ngIf="mobile.touched && mobile?.errors"
           class="invalid-feedback">
           <p *ngIf="mobile.value && mobile.errors.mobile">
             Invalid mobile format
@@ -113,13 +113,13 @@
         </div>
 
         <div 
-          *ngIf="email.dirty && email?.errors"
+          *ngIf="email.touched && email?.errors"
           class="invalid-feedback">
           <p *ngIf="email.errors.required">
             Enter your email address
           </p>
 
-          <p *ngIf="!email.errors.required && email.errors.email">
+          <p *ngIf="email.value && email.errors.email">
             Invalid email format
           </p>
         </div>
@@ -141,7 +141,21 @@
           </button>
         </div>
 
-        <div class="invalid-feedback"></div>
+        <div 
+          *ngIf="password.touched && password?.errors"
+          class="invalid-feedback">
+          <p *ngIf="password.errors.required">
+            Enter a password
+          </p>
+
+          <p *ngIf="password.errors.minlength">
+            The password can't be less than 5 characters
+          </p>
+
+          <p *ngIf="password.value && password.errors.password">
+            Invalid password
+          </p>
+        </div>
       </div>
 
       <div class="form-group">
@@ -160,16 +174,26 @@
           </button>
         </div>
 
-        <div class="invalid-feedback"></div>
+        <div 
+          *ngIf="rePassword.touched && 
+          (rePassword?.errors || signupForm?.errors?.rePassword)"
+          class="invalid-feedback">
+          <p *ngIf="rePassword?.errors?.required">
+            Re-enter your password
+          </p>
+
+          <p *ngIf="rePassword.value && signupForm?.errors?.rePassword">
+            The passwords don't match
+          </p>
+        </div>
       </div>
   
       <div class="action-buttons">
         <button 
-
+          [disabled]="signupForm.invalid"
           class="btn-xl-filled signup-btn">Create account</button>
       </div>
 
-    
       <a routerLink="../login" class="existing-user">
         Already a member? Log in now
       </a>
