--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -252,7 +252,7 @@
           animation: slideUp 0.2s ease;
 
           p {
-            color: #963249;
+            color: #ff2d2d;
             font-size: 0.8rem;
           }
         }
