--- a/src/app/user/signup-page/signup-page.component.scss
+++ b/src/app/user/signup-page/signup-page.component.scss
@@ -211,6 +211,14 @@
                 font-size: 0.75rem;
               }
             }
+
+            .valid {
+              border-color: #26c45b;
+            }
+
+            .invalid {
+              border-color: #ff2d2d;
+            }
           }
   
           label {
@@ -284,8 +292,24 @@
           animation: slideUp 0.2s ease;
 
           p {
-            color: #963249;
+            color: #ff2d2d;
             font-size: 0.8rem;
+          }
+        }
+
+        .valid-feedback {
+          @extend .invalid-feedback;
+
+          p {
+            display: flex;
+            align-items: center;
+            color: #26c45b;
+
+            .material-icons {
+              margin-left: 0.2rem;
+              color: inherit;
+              font-size: 0.8rem;
+            }
           }
         }
       }
