--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,13 @@
 <section class="container">
   <div class="wrapper-l">
     <h1>NOT FOUND - 404</h1>
+
+    <dynamic-form></dynamic-form>
+
+
+
+
+
+
   </div>
 </section>
