--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -20,7 +20,7 @@
       justify-content: space-between;
       padding: 1rem 0 0;
 
-      input {
+      input, select, textarea {
         position: relative;
         width: 100%;
         padding: 0.25rem 0;
