--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -2,12 +2,8 @@
   <div class="wrapper-l">
     <h1>NOT FOUND - 404</h1>
 
-    <dynamic-form></dynamic-form>
-
-
-
-
-
-
+    <dynamic-form
+  
+    ></dynamic-form>
   </div>
 </section>
