--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -4,8 +4,7 @@
 
     <div *ngIf="categories">
       <dynamic-form
-      [selectOptions]="categories"
-      (ngSubmit)="onSubmit($event)"></dynamic-form>
+      (onSubmit)="onSubmit($event)"></dynamic-form>
     </div>
 
   </div>
