--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -2,10 +2,9 @@
   <div class="wrapper-l">
     <h1>NOT FOUND - 404</h1>
 
-    <div *ngIf="categories">
-      <dynamic-form
-      (onSubmit)="onSubmit($event)"></dynamic-form>
-    </div>
+
+    <dynamic-form></dynamic-form>
+
 
   </div>
 </section>
