--- a/src/app/shared/dynamic-form/form-controls/form-controls.component.html
+++ b/src/app/shared/dynamic-form/form-controls/form-controls.component.html
@@ -28,12 +28,12 @@
 
         <span *ngIf="field.inpuType == 'password'">
           <button 
-          
+            (click)="showPassword = !showPassword"
             class="toggle_password_visibility"
             type="button"
             tabindex="-10">
             <i class="material-icons">visibility</i>
-            <!-- <i *ngIf="showPassword" class="material-icons">visibility_off</i> -->
+            <i *ngIf="showPassword" class="material-icons">visibility_off</i>
           </button>
         </span>
       </div>
