--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -3,7 +3,7 @@
     <h1>NOT FOUND - 404</h1>
 
 
-    <dynamic-form></dynamic-form>
+    <dynamic-form (onSubmit)="onSubmit($event)"></dynamic-form>
 
 
   </div>
